Modified CSS to correctly wrap text in the title and tags

--- a/static/style2.css
+++ b/static/style2.css
@@ -42,6 +42,7 @@ div#details {
     align-items: center;
     display: flex;
     flex: 1;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
 }
@@ -92,6 +93,10 @@ div#tags {
 
 div#title {
     font-size: 28px;
+    max-width: calc(100% - 20px);
+    white-space: pre-wrap;
+    word-break: break-word;
+    word-wrap: break-word;
 }
 
 img#image {
@@ -115,5 +120,9 @@ span.tag {
     display: inline-block;
     margin-bottom: 10px;
     margin-right: 10px;
+    max-width: calc(100% - 20px);
     padding: 10px;
+    white-space: pre-wrap;
+    word-break: break-word;
+    word-wrap: break-word;
 }
